# popf-tif

./: README.md  build-instructions.txt
VALfiles/: TypedAnalyser.h
popf/: CMakeLists.txt  CMakeLists.txtBackup  DotSearchSpace.cpp  DotSearchSpace.h  ExternalSolver.cpp  ExternalSolver.h  FFEvent.cpp  FFEvent.h  FFSolver.cpp  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  lpscheduler.cpp  minimalstate.h  partialordertransformer.cpp  popfMain.cpp
